<package>
  <name>ros</name>
  <version>1.11.5</version>
  <description>ROS packaging system</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/ROS</url>
  <url type="bugtracker">https://github.com/ros/ros/issues</url>
  <url type="repository">https://github.com/ros/ros</url>

  <author>Eric Berger</author>
  <author>Ken Conley</author>
  <author>Josh Faust</author>
  <author>Tully Foote</author>
  <author>Brian Gerkey</author>
  <author>Jeremy Leibs</author>
  <author>Morgan Quigley</author>
  <author>Rob Wheeler</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>catkin</run_depend> <!-- only for backward compatibility with rosbuild -->
  <run_depend>mk</run_depend>
  <run_depend>rosbuild</run_depend>
  <run_depend>roslang</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rosbash</run_depend>
  <run_depend>rosboost_cfg</run_depend>
  <run_depend>rosclean</run_depend>
  <run_depend>roscreate</run_depend>
  <run_depend>rosmake</run_depend>
  <run_depend>rosunit</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
