<package>
  <name>roslisp</name>
  <version>1.9.7</version>
  <description>Lisp client library for ROS, the Robot Operating System.</description>
  <maintainer email="dthomas@willowgarage.com">Dirk Thomas</maintainer>
  <license>BSD</license>

  <author>Bhaskara Marthi</author>
  <author>Brian Gerkey</author>
  <author>Lorenz Mösenlechner</author>
  <author>Thibault Kruse</author>

  <url>http://ros.org/wiki/roslisp</url>

  <build_depend>catkin</build_depend>
  <run_depend>roslang</run_depend>

  <export>
    <roslang cmake="${prefix}/rosbuild/roslisp.cmake"/>
  </export>
</package>
