<package>
  <name>mk</name>
  <version>1.12.5</version>
  <description>
    A collection of .mk include files for building ROS architectural elements.
    Most package authors should use cmake .mk, which calls CMake for the build of the package.
    The other files in this package are intended for use in exotic situations that mostly arise when importing 3rdparty code.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url>http://www.ros.org/wiki/ROS</url>
  <author>Morgan Quigley</author>
  <author>Brian Gerkey</author>

  <buildtool_depend version_gte="0.5.69">catkin</buildtool_depend>

  <run_depend>rosbuild</run_depend>
</package>
