<package>
  <name>rosbuild</name>
  <version>1.9.35</version>
  <description>
    rosbuild contains scripts for managing the CMake-based build system for ROS.
  </description>
  <maintainer email="dthomas@willowgarage.com">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/rosbuild</url>
  <author>Brian Gerkey</author>
  <author>Troy Straszheim</author>
  <author>Morgan Quigley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pkg-config</build_depend>
</package>
