<package>
  <name>roslang</name>
  <version>1.15.4</version>
  <description>
    roslang is a common package that all <a href="http://www.ros.org/wiki/Client%20Libraries">ROS client libraries</a> depend on.
    This is mainly used to find client libraries (via 'rospack depends-on1 roslang').
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/roslang</url>
  <author email="gerkey@willowgarage.com">Brian Gerkey</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>catkin</run_depend>
  <run_depend>genmsg</run_depend>
</package>
