<package>
  <name>roslib</name>
  <version>1.9.31</version>
  <description>
    Base dependencies and support libraries for ROS.
    roslib contains many of the common data structures and tools that are shared across ROS client library implementations.
  </description>
  <maintainer email="dthomas@willowgarage.com">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/roslib</url>
  <author email="kwc@willowgarage.com">Ken Conley</author>
  <author email="mquigley@cs.stanford.edu">Morgan Quigley</author>
  <author email="jfaust@willowgarage.com">Josh Faust</author>

  <build_depend>boost</build_depend>
  <build_depend>catkin</build_depend>
  <build_depend>rospack</build_depend>

  <run_depend>python-rospkg</run_depend>
  <run_depend>rospack</run_depend>

  <export>
     <rosdoc config="${prefix}/rosdoc.yaml" />
  </export>
</package>
