<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roslib</name>
  <version>1.15.3</version>
  <description>
    Base dependencies and support libraries for ROS.
    roslib contains many of the common data structures and tools that are shared across ROS client library implementations.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/roslib</url>
  <url type="bugtracker">https://github.com/ros/ros/issues</url>
  <url type="repository">https://github.com/ros/ros</url>
  <author email="kwc@willowgarage.com">Ken Conley</author>
  <author email="mquigley@cs.stanford.edu">Morgan Quigley</author>
  <author email="jfaust@willowgarage.com">Josh Faust</author>

  <depend>rospack</depend>

  <buildtool_depend version_gte="0.6.7">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <build_depend>libboost-thread-dev</build_depend>

  <exec_depend>catkin</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2" version_gte="1.0.37">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3" version_gte="1.0.37">python3-rospkg</exec_depend>
  <exec_depend>ros_environment</exec_depend>

  <test_depend>libboost-filesystem-dev</test_depend>
  <test_depend>rosmake</test_depend>

  <export>
     <rosdoc config="${prefix}/rosdoc.yaml" />
  </export>
</package>
