<package>
  <name>std_srvs</name>
  <version>1.9.7</version>
  <description>Common service definitions. Currently just the 'Empty' service.</description>
  <maintainer email="dthomas@willowgarage.com">Dirk Thomas</maintainer>
  <license>BSD</license>

  <author>Morgan Quigley</author>

  <url>http://ros.org/wiki/std_srvs</url>

  <build_depend>catkin</build_depend>
  <build_depend>genmsg</build_depend>
</package>
